error handling refined

--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -20,15 +20,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="emF-ra-DfX">
+                                <rect key="frame" x="0.0" y="-3352.5" width="375" height="7371.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GoQ-X0-C04">
+                                        <rect key="frame" x="20" y="0.0" width="335" height="7371.5"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BEa-pQ-8ou">
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="103"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SadCloud" translatesAutoresizingMaskIntoConstraints="NO" id="QRd-v4-MWg">
+                                                        <rect key="frame" x="92.5" y="0.0" width="150" height="103"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="QRd-v4-MWg" secondAttribute="height" multiplier="150:103" id="0YJ-cq-y5S"/>
+                                                            <constraint firstAttribute="width" constant="150" id="7dF-E3-noZ"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="QRd-v4-MWg" secondAttribute="bottom" id="8sS-hS-m0D"/>
+                                                    <constraint firstItem="QRd-v4-MWg" firstAttribute="centerX" secondItem="BEa-pQ-8ou" secondAttribute="centerX" id="gej-TP-blw"/>
+                                                    <constraint firstItem="QRd-v4-MWg" firstAttribute="top" secondItem="BEa-pQ-8ou" secondAttribute="top" id="zxC-Zo-cHs"/>
+                                                </constraints>
+                                            </view>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Xn8-ZN-U03">
+                                                <rect key="frame" x="0.0" y="123" width="335" height="7248.5"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Weather Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ty3-Y9-aU0">
+                                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather data could not be loaded. Make sure you are connected to the Internet." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccx-2t-Xmu">
+                                                        <rect key="frame" x="0.0" y="30.5" width="335" height="7218"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="GoQ-X0-C04" firstAttribute="top" secondItem="emF-ra-DfX" secondAttribute="top" id="4gn-Cr-5WM"/>
+                                    <constraint firstItem="GoQ-X0-C04" firstAttribute="leading" secondItem="emF-ra-DfX" secondAttribute="leading" constant="20" id="Pbb-wO-z8z"/>
+                                    <constraint firstAttribute="trailing" secondItem="GoQ-X0-C04" secondAttribute="trailing" constant="20" id="Rx9-qG-CJQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="GoQ-X0-C04" secondAttribute="bottom" id="SDx-SM-N9h"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mgw-Bz-sT3">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="99J-tm-PbI">
-                                    <rect key="frame" x="0.0" y="233.5" width="375" height="30"/>
+                                    <rect key="frame" x="0.0" y="233.5" width="375" height="41"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7iY-79-fIX" userLabel="Line View">
+                                            <rect key="frame" x="20" y="0.0" width="335" height="1"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="ARc-KT-01s"/>
+                                            </constraints>
+                                        </view>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNH-C8-mRJ">
-                                            <rect key="frame" x="136" y="10" width="103.5" height="10"/>
+                                            <rect key="frame" x="135.5" y="21" width="104" height="10"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="WNH-C8-mRJ" secondAttribute="height" multiplier="207:20" id="WET-uV-HRn"/>
                                                 <constraint firstAttribute="height" constant="10" id="gdy-q3-Km1"/>
@@ -43,7 +102,10 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstItem="WNH-C8-mRJ" firstAttribute="top" secondItem="99J-tm-PbI" secondAttribute="top" constant="10" id="Np5-Sf-ZPL"/>
+                                        <constraint firstItem="7iY-79-fIX" firstAttribute="leading" secondItem="99J-tm-PbI" secondAttribute="leading" constant="20" id="Mkk-y4-XUa"/>
+                                        <constraint firstItem="WNH-C8-mRJ" firstAttribute="top" secondItem="99J-tm-PbI" secondAttribute="top" constant="21" id="Np5-Sf-ZPL"/>
+                                        <constraint firstAttribute="trailing" secondItem="7iY-79-fIX" secondAttribute="trailing" constant="20" id="Sml-5a-iSk"/>
+                                        <constraint firstItem="7iY-79-fIX" firstAttribute="top" secondItem="99J-tm-PbI" secondAttribute="top" id="UbU-2L-ERS"/>
                                         <constraint firstAttribute="bottom" secondItem="WNH-C8-mRJ" secondAttribute="bottom" constant="10" id="Xdx-3C-zAA"/>
                                         <constraint firstItem="WNH-C8-mRJ" firstAttribute="centerX" secondItem="99J-tm-PbI" secondAttribute="centerX" id="wsb-Ed-lVj"/>
                                     </constraints>
@@ -283,9 +345,12 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="Mgw-Bz-sT3" secondAttribute="bottom" id="70R-UP-W8N"/>
                             <constraint firstItem="Mgw-Bz-sT3" firstAttribute="leading" secondItem="Y8Z-AY-YLj" secondAttribute="leading" id="781-O0-0Oh"/>
+                            <constraint firstItem="emF-ra-DfX" firstAttribute="centerX" secondItem="WPE-pZ-JQ9" secondAttribute="centerX" id="PaK-9V-NDO"/>
                             <constraint firstItem="Y8Z-AY-YLj" firstAttribute="trailing" secondItem="66v-OR-ig0" secondAttribute="trailing" constant="15" id="Qmf-Kc-zbW"/>
+                            <constraint firstItem="emF-ra-DfX" firstAttribute="centerY" secondItem="WPE-pZ-JQ9" secondAttribute="centerY" id="T18-Oz-tYF"/>
                             <constraint firstItem="Y8Z-AY-YLj" firstAttribute="trailing" secondItem="Mgw-Bz-sT3" secondAttribute="trailing" id="fWP-PI-VUG"/>
                             <constraint firstItem="Y8Z-AY-YLj" firstAttribute="bottom" secondItem="66v-OR-ig0" secondAttribute="bottom" constant="15" id="lLt-P2-P4G"/>
+                            <constraint firstItem="emF-ra-DfX" firstAttribute="width" secondItem="WPE-pZ-JQ9" secondAttribute="width" id="q5G-5G-8AI"/>
                             <constraint firstItem="Mgw-Bz-sT3" firstAttribute="height" secondItem="WPE-pZ-JQ9" secondAttribute="height" id="u9y-Ld-mbJ"/>
                             <constraint firstItem="66v-OR-ig0" firstAttribute="leading" secondItem="Y8Z-AY-YLj" secondAttribute="leading" constant="15" id="wNh-w2-16S"/>
                         </constraints>
@@ -295,8 +360,12 @@
                     <connections>
                         <outlet property="buttonRowContainerView" destination="66v-OR-ig0" id="B9G-4b-vS6"/>
                         <outlet property="buttonRowStackView" destination="cO7-FX-PEe" id="eZj-SU-sIi"/>
-                        <outlet property="infoButton" destination="nlV-Vb-JpW" id="9hz-4g-AJb"/>
+                        <outlet property="emptyListDescriptionLabel" destination="ccx-2t-Xmu" id="HFc-lL-Qsn"/>
+                        <outlet property="emptyListImageView" destination="QRd-v4-MWg" id="k3R-Sp-AXC"/>
+                        <outlet property="emptyListTitleLabel" destination="Ty3-Y9-aU0" id="XzB-PE-ssK"/>
+                        <outlet property="mapButton" destination="nlV-Vb-JpW" id="9hz-4g-AJb"/>
                         <outlet property="refreshButton" destination="EAw-iC-6ti" id="AOb-PQ-WTB"/>
+                        <outlet property="separatoLineViewHeightConstraint" destination="ARc-KT-01s" id="GHC-TY-4y7"/>
                         <outlet property="settingsButton" destination="SPo-ZW-m5T" id="BZV-85-nqX"/>
                         <outlet property="sortButton" destination="GQ1-2i-5Af" id="O5Z-8H-8To"/>
                         <outlet property="tableView" destination="Mgw-Bz-sT3" id="usa-dy-QN7"/>
@@ -810,13 +879,13 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PQk-Il-74x">
-                                    <rect key="frame" x="0.0" y="25" width="0.0" height="120"/>
+                                    <rect key="frame" x="0.0" y="25" width="375" height="120"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDb-dK-OSj">
-                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nearbyweather_webicon" translatesAutoresizingMaskIntoConstraints="NO" id="djW-Ua-f6G">
-                                                    <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
+                                                    <rect key="frame" x="150" y="0.0" width="75" height="75"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="75" id="XGi-Z8-l88"/>
                                                         <constraint firstAttribute="width" secondItem="djW-Ua-f6G" secondAttribute="height" multiplier="1:1" id="b3Z-aR-Pwv"/>
@@ -832,7 +901,7 @@
                                             </constraints>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NearbyWeather - Open Source Weather" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6C-kQ-Qmj" userLabel="appTitleLabel">
-                                            <rect key="frame" x="0.0" y="80" width="0.0" height="25"/>
+                                            <rect key="frame" x="0.0" y="80" width="375" height="25"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="25" id="wVl-qL-80q"/>
                                             </constraints>
@@ -841,7 +910,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.2 Build #6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czi-Ez-K0K" userLabel="appVersionLabel">
-                                            <rect key="frame" x="0.0" y="105" width="0.0" height="15"/>
+                                            <rect key="frame" x="0.0" y="105" width="375" height="15"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="15" id="JKS-0y-IhZ"/>
                                             </constraints>
@@ -1360,6 +1429,7 @@
         <image name="Map" width="25" height="25"/>
         <image name="OpenWeatherMapLogo" width="207" height="20"/>
         <image name="Reload" width="25" height="25"/>
+        <image name="SadCloud" width="150" height="103"/>
         <image name="Settings" width="25" height="25"/>
         <image name="Sorting" width="25" height="25"/>
         <image name="nearbyweather_webicon" width="150" height="150"/>
